# poekit

./: .gitignore  CITATION.cff  CONTRIBUTING.md  COPYING.LESSER  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt
.github/workflows/: test.yml
examples/: jaco2_fk.py  jaco2_ik.py  jaco2_jacobian.py
src/poekit/: __init__.py  coriolis_utils.py  expmapping.py  forward_kine.py  inertia_utils.py  jacobian.py  paden_kahan.py  potential_utils.py  rotation_utils.py  skewops.py  tform_utils.py  twist_utils.py  utils.py  wrench_utils.py
tests/: test_expmapping.py  test_rotationutils.py  test_skewops.py  test_tformutils.py  test_twistutils.py  test_utils.py  test_wrenchutils.py
